<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DodajDoBazy"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tekst1"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tekst1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button2"
        android:onClick="wypisz"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:onClick="wpisz"
        />
</LinearLayout>